--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Hello, I'm James 👋</h1>
-  <p>I'm a freelance developer skilled in Java, PHP, and Android.</p>
+  <p>I'm a freelance developer skilled in Java, Native Android and Flutter.</p>
   <h2>Projects</h2>
   <ul>
     <li><a href="https://github.com/your-username/project1">Project 1</a></li>
