--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
       <h3>RSPSMS</h3>
       <p><em>Rice Spray Planner Scheduler and Monitoring System – Native Android</em></p>
       <div class="images">
-        <img src="placeholder.png" alt="RSPSMS Screenshot 1">
-        <img src="placeholder.png" alt="RSPSMS Screenshot 2">
-        <img src="placeholder.png" alt="RSPSMS Screenshot 3">
-        <img src="placeholder.png" alt="RSPSMS Screenshot 4">
-        <img src="placeholder.png" alt="RSPSMS Screenshot 5">
+        <img src="pos-ss1.jpg" alt="RSPSMS Screenshot 1">
+        <img src="pos-ss2.jpg" alt="RSPSMS Screenshot 2">
+        <img src="pos-ss3.jpg" alt="RSPSMS Screenshot 3">
+        <img src="pos-ss4.jpg" alt="RSPSMS Screenshot 4">
+        <img src="pos-ss5.jpg" alt="RSPSMS Screenshot 5">
       </div>
     </div>
 
