--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
       <h3>Small Time POS</h3>
       <p><em>Point-of-Sale System – Flutter</em></p>
       <div class="images">
-        <img src="placeholder.png" alt="Small Time POS Screenshot 1">
-        <img src="placeholder.png" alt="Small Time POS Screenshot 2">
-        <img src="placeholder.png" alt="Small Time POS Screenshot 3">
-        <img src="placeholder.png" alt="Small Time POS Screenshot 4">
-        <img src="placeholder.png" alt="Small Time POS Screenshot 5">
+        <img src="images/pos-ss1.jpg" alt="POS Screenshot 1">
+        <img src="images/pos-ss2.jpg" alt="POS Screenshot 2">
+        <img src="images/pos-ss3.jpg" alt="POS Screenshot 3">
+        <img src="images/pos-ss4.jpg" alt="POS Screenshot 4">
+        <img src="images/pos-ss5.jpg" alt="POS Screenshot 5">
       </div>
     </div>
 
