--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <!-- Hero Section -->
   <header>
-    <h1>Hello, I'm James 👋</h1>
+    <h1>Hello, I'm Nazer 👋</h1>
     <p>A freelance developer skilled in Java, Native Android, and Flutter</p>
   </header>
 
