--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="contact">
+  <section id="contact" class="contact text-center">
     <h2>Contact Me</h2>
     <p>Feel free to reach out for freelance opportunities or collaborations.</p>
     <a href="mailto:your.email@example.com">Email Me</a>
