--- a/index.html
+++ b/index.html
@@ -162,11 +162,12 @@
       <h3>USM Trike Tracker</h3>
       <p><em>Native Android app for real-time tricycle tracking within the university campus</em></p>
       <div class="images">
-        <img src="placeholder.png" alt="USM Trike Tracker Screenshot 1">
-        <img src="placeholder.png" alt="USM Trike Tracker Screenshot 2">
-        <img src="placeholder.png" alt="USM Trike Tracker Screenshot 3">
-        <img src="placeholder.png" alt="USM Trike Tracker Screenshot 4">
-        <img src="placeholder.png" alt="USM Trike Tracker Screenshot 5">
+        <img src="images/usmtt-ss1" alt="USM Trike Tracker Screenshot 1">
+        <img src="images/usmtt-ss2" alt="USM Trike Tracker Screenshot 2">
+        <img src="images/usmtt-ss3" alt="USM Trike Tracker Screenshot 3">
+        <img src="images/usmtt-ss4" alt="USM Trike Tracker Screenshot 4">
+        <img src="images/usmtt-ss5" alt="USM Trike Tracker Screenshot 5">
+        <img src="images/usmtt-ss6" alt="USM Trike Tracker Screenshot 5">
       </div>
     </div>
 
