--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
     /* Contact */
     .contact {
       text-align: center;
-      margin: 3rem 0;
+      margin: 40px auto;
     }
 
     .contact a {
-      display: inline-block;
-      margin: 0.5rem;
-      padding: 0.7rem 1.5rem;
-      background: #0366d6;
-      color: white;
+      display: inline-block; /* makes them behave like buttons */
+      margin: 10px;          /* space between links */
+      padding: 10px 20px;
+      border-radius: 6px;
+      background: #0077b6;   /* nice blue button */
+      color: #fff;
       text-decoration: none;
-      border-radius: 5px;
       transition: background 0.3s ease;
     }
 
@@ -210,7 +210,7 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="contact text-center">
+  <section id="contact" class="contact">
     <h2>Contact Me</h2>
     <p>Feel free to reach out for freelance opportunities or collaborations.</p>
     <a href="mailto:your.email@example.com">Email Me</a>
