Added new images for Small Time POS system.

--- a/index.html
+++ b/index.html
@@ -204,6 +204,18 @@
         <img src="images/pos-ss3.jpg" alt="POS Screenshot 3">
         <img src="images/pos-ss4.jpg" alt="POS Screenshot 4">
         <img src="images/pos-ss5.jpg" alt="POS Screenshot 5">
+        <img src="images/pos-ss6.jpg" alt="POS Screenshot 6">
+        <img src="images/pos-ss7.jpg" alt="POS Screenshot 7">
+        <img src="images/pos-ss8.jpg" alt="POS Screenshot 8">
+        <img src="images/pos-ss9.jpg" alt="POS Screenshot 9">
+        <img src="images/pos-ss10.jpg" alt="POS Screenshot 10">
+        <img src="images/pos-ss11.jpg" alt="POS Screenshot 11">
+        <img src="images/pos-ss12.jpg" alt="POS Screenshot 12">
+        <img src="images/pos-ss13.jpg" alt="POS Screenshot 13">
+        <img src="images/pos-ss14.jpg" alt="POS Screenshot 14">
+        <img src="images/pos-ss15.jpg" alt="POS Screenshot 15">
+        <img src="images/pos-ss16.jpg" alt="POS Screenshot 16">
+        <img src="images/pos-ss17.jpg" alt="POS Screenshot 17">
       </div>
     </div>
 
