Added two new images for RSPSMS.

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
         <img src="images/rspsms-ss3.jpg" alt="RSPSMS Screenshot 3">
         <img src="images/rspsms-ss4.jpg" alt="RSPSMS Screenshot 4">
         <img src="images/rspsms-ss5.jpg" alt="RSPSMS Screenshot 5">
+        <img src="images/rspsms-ss6.jpg" alt="RSPSMS Screenshot 6">
+        <img src="images/rspsms-ss7.jpg" alt="RSPSMS Screenshot 7">
       </div>
     </div>
 
