--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nazty16's Developer Portfolio</title>
+  <title>Nazer's Developer Portfolio</title>
   <style>
     /* General styles */
     body {
@@ -135,8 +135,8 @@
       <h3>Junior Software Developer 3 – Local IT Company</h3>
       <p><strong>September 2022 – Present</strong></p>
       <ul>
-        <li>Worked on Employee Portal using Vue + Laravel</li>
-        <li>Developed Payroll System using GWT, GXT + Java</li>
+        <li>Working on Employee Portal using Vue + Laravel</li>
+        <li>Working on Payroll System using GWT, GXT + Java</li>
         <li>Career Progression: Dev 1 (2022) → Dev 2 (2023) → Dev 3 (2024–Present)</li>
       </ul>
     </div>
@@ -227,9 +227,9 @@
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
     <p>Feel free to reach out for freelance opportunities or collaborations.</p>
-    <a href="mailto:your.email@example.com">Email Me</a>
-    <a href="https://github.com/your-username">GitHub</a>
-    <a href="https://linkedin.com/in/your-username">LinkedIn</a>
+    <a href="mailto:malaguianv@gmail.com">Email Me</a>
+    <a href="https://github.com/nazty16">GitHub</a>
+    <a href="https://www.facebook.com/nazty00">Facebook</a>
   </section>
 
 </body>
