Fixed missing path text.

--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
       <h3>Kapehan App</h3>
       <p><em>A coffee ordering app – Native Android</em></p>
       <div class="images">
-        <img src="kapehan-ss1.jpg" alt="Kapehan App Screenshot 1">
-        <img src="kapehan-ss2.jpg" alt="Kapehan App Screenshot 2">
-        <img src="kapehan-ss3.jpg" alt="Kapehan App Screenshot 3">
-        <img src="kapehan-ss4.jpg" alt="Kapehan App Screenshot 4">
-        <img src="kapehan-ss5.jpg" alt="Kapehan App Screenshot 5">
-        <img src="kapehan-ss6.jpg" alt="Kapehan App Screenshot 6">
-        <img src="kapehan-ss7.jpg" alt="Kapehan App Screenshot 7">
+        <img src="images/kapehan-ss1.jpg" alt="Kapehan App Screenshot 1">
+        <img src="images/kapehan-ss2.jpg" alt="Kapehan App Screenshot 2">
+        <img src="images/kapehan-ss3.jpg" alt="Kapehan App Screenshot 3">
+        <img src="images/kapehan-ss4.jpg" alt="Kapehan App Screenshot 4">
+        <img src="images/kapehan-ss5.jpg" alt="Kapehan App Screenshot 5">
+        <img src="images/kapehan-ss6.jpg" alt="Kapehan App Screenshot 6">
+        <img src="images/kapehan-ss7.jpg" alt="Kapehan App Screenshot 7">
       </div>
     </div>
 
