--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
   <!-- Hero Section -->
   <header>
-    <h1>Hello, I'm Nazer 👋</h1>
+    <h1>Hello, I'm Nazer! 👋</h1>
     <p>A freelance developer skilled in Java, Native Android, and Flutter</p>
   </header>
 
@@ -177,11 +177,11 @@
       <h3>USM Mental Health Care</h3>
       <p><em>Appointment and Counselling Scheduling System – Native Android</em></p>
       <div class="images">
-        <img src="placeholder.png" alt="USM Mental Health Screenshot 1">
-        <img src="placeholder.png" alt="USM Mental Health Screenshot 2">
-        <img src="placeholder.png" alt="USM Mental Health Screenshot 3">
-        <img src="placeholder.png" alt="USM Mental Health Screenshot 4">
-        <img src="placeholder.png" alt="USM Mental Health Screenshot 5">
+        <img src="images/usmmh-ss1.jpg" alt="USM Mental Health Screenshot 1">
+        <img src="images/usmmh-ss2.jpg" alt="USM Mental Health Screenshot 2">
+        <img src="images/usmmh-ss3.jpg" alt="USM Mental Health Screenshot 3">
+        <img src="images/usmmh-ss4.jpg" alt="USM Mental Health Screenshot 4">
+        <img src="images/usmmh-ss5.jpg" alt="USM Mental Health Screenshot 5">
       </div>
     </div>
 
