--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     <div class="project">
       <h3>USM Trike Tracker</h3>
-      <p><em>Native Android app for real-time tricycle tracking within the university campus</em></p>
+      <p><em>Students Ride History Tracker system for the University of Southern Mindanao – Native Android</em></p>
       <div class="images">
         <img src="images/usmtt-ss1.jpg" alt="USM Trike Tracker Screenshot 1">
         <img src="images/usmtt-ss2.jpg" alt="USM Trike Tracker Screenshot 2">
