--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@
         <img src="images/kapehan-ss5.jpg" alt="Kapehan App Screenshot 5">
         <img src="images/kapehan-ss6.jpg" alt="Kapehan App Screenshot 6">
         <img src="images/kapehan-ss7.jpg" alt="Kapehan App Screenshot 7">
+        <img src="images/kapehan-ss8.jpg" alt="Kapehan App Screenshot 8">
+        <img src="images/kapehan-ss9.jpg" alt="Kapehan App Screenshot 9">
       </div>
     </div>
 
