--- a/index.html
+++ b/index.html
@@ -170,7 +170,18 @@
       </div>
     </div>
 
-        <div class="project">
+    <div class="project">
+      <h3>Commission Calculator App</h3>
+      <p><em>A calculator app that solves employee commission shares – Flutter</em></p>
+      <div class="images">
+        <img src="images/cc-ss1.jpg" alt="Commission Calculator Screenshot 1">
+        <img src="images/cc-ss2.jpg" alt="Commission Calculator Screenshot 2">
+        <img src="images/cc-ss3.jpg" alt="Commission Calculator Screenshot 3">
+        <img src="images/cc-ss4.jpg" alt="Commission Calculator Screenshot 4">
+      </div>
+    </div>
+    
+    <div class="project">
       <h3>Kapehan App</h3>
       <p><em>A coffee ordering app – Native Android</em></p>
       <div class="images">
@@ -218,11 +229,12 @@
       <h3>USM Mental Health Care</h3>
       <p><em>Appointment and Counselling Scheduling System – Native Android</em></p>
       <div class="images">
-        <img src="images/usmmh-ss1.jpg" alt="USM Mental Health Screenshot 1">
-        <img src="images/usmmh-ss2.jpg" alt="USM Mental Health Screenshot 2">
-        <img src="images/usmmh-ss3.jpg" alt="USM Mental Health Screenshot 3">
-        <img src="images/usmmh-ss4.jpg" alt="USM Mental Health Screenshot 4">
-        <img src="images/usmmh-ss5.jpg" alt="USM Mental Health Screenshot 5">
+        <img src="images/usmmhc-ss1.jpg" alt="USM Mental Health Screenshot 1">
+        <img src="images/usmmhc-ss2.jpg" alt="USM Mental Health Screenshot 2">
+        <img src="images/usmmhc-ss3.jpg" alt="USM Mental Health Screenshot 3">
+        <img src="images/usmmhc-ss4.jpg" alt="USM Mental Health Screenshot 4">
+        <img src="images/usmmhc-ss5.jpg" alt="USM Mental Health Screenshot 5">
+        <img src="images/usmmhc-ss6.jpg" alt="USM Mental Health Screenshot 6">
       </div>
     </div>
 
