Added new images on Job experience section.

--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
         <li>Career Progression: Dev 1 (2022) → Dev 2 (2023) → Dev 3 (2024–Present)</li>
       </ul>
     </div>
+
+    <div class="images">
+        <img src="images/eportal.png" alt="Eportal Screenshot">
+        <img src="images/payroll.png" alt="Payroll Screenshot">
+      </div>
+    
   </section>
 
   <!-- Projects -->
