--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       object-fit: cover;
       background: #ddd;
       border-radius: 8px;
+      cursor: pointer;
     }
 
     /* Contact */
@@ -291,7 +292,7 @@
       lightbox.classList.add('lightbox');
       document.body.appendChild(lightbox);
     
-      const images = document.querySelectorAll('.experience .images img');
+      const images = document.querySelectorAll('.experience .images .project img');
       images.forEach(img => {
         img.addEventListener('click', () => {
           lightbox.innerHTML = '';
