--- a/index.html
+++ b/index.html
@@ -292,8 +292,19 @@
       lightbox.classList.add('lightbox');
       document.body.appendChild(lightbox);
     
-      const images = document.querySelectorAll('.experience .images .project img');
+      const images = document.querySelectorAll('.experience .images img');
       images.forEach(img => {
+        img.addEventListener('click', () => {
+          lightbox.innerHTML = '';
+          const largeImg = document.createElement('img');
+          largeImg.src = img.src; 
+          lightbox.appendChild(largeImg);
+          lightbox.style.display = 'flex';
+        });
+      });
+
+      const images2 = document.querySelectorAll('.project .images img');
+      images2.forEach(img => {
         img.addEventListener('click', () => {
           lightbox.innerHTML = '';
           const largeImg = document.createElement('img');
