--- a/index.html
+++ b/index.html
@@ -286,59 +286,51 @@
     <a href="https://www.facebook.com/nazty00">Facebook</a>
   </section>
 
-    <script>
-      // Create lightbox dynamically
-      const lightbox = document.createElement('div');
-      lightbox.classList.add('lightbox');
-      document.body.appendChild(lightbox);
+<script>
+  // Collect all images
+  const images = document.querySelectorAll('.experience .images img, .project .images img');
+  let currentIndex = -1;
 
-      const lbImg = lightbox.querySelector('img');
-      const prevBtn = lightbox.querySelector('.lb-prev');
-      const nextBtn = lightbox.querySelector('.lb-next');
+  // Create lightbox container
+  const lightbox = document.createElement('div');
+  lightbox.classList.add('lightbox');
+  lightbox.style.display = 'none';
+  lightbox.innerHTML = `<img src="" alt="Expanded view">`;
+  document.body.appendChild(lightbox);
 
-      let currentIndex = -1;
-    
-      const images = document.querySelectorAll('.experience .images img');
-      images.forEach(img => {
-        img.addEventListener('click', () => {
-          lightbox.innerHTML = '';
-          const largeImg = document.createElement('img');
-          largeImg.src = img.src; 
-          lightbox.appendChild(largeImg);
-          lightbox.style.display = 'flex';
-        });
-      });
+  const lbImg = lightbox.querySelector('img');
 
-      const images2 = document.querySelectorAll('.project .images img');
-      images2.forEach(img => {
-        img.addEventListener('click', () => {
-          lightbox.innerHTML = '';
-          const largeImg = document.createElement('img');
-          largeImg.src = img.src; 
-          lightbox.appendChild(largeImg);
-          lightbox.style.display = 'flex';
-        });
-      });
+  // Function to open at a specific index
+  function openAt(index) {
+    if (index < 0 || index >= images.length) return;
+    currentIndex = index;
+    lbImg.src = images[currentIndex].src;
+    lightbox.style.display = 'flex';
+  }
 
-      function showNext() { openAt(currentIndex + 1); }
-      function showPrev() { openAt(currentIndex - 1); }
+  // Function to close lightbox
+  function closeLB() {
+    lightbox.style.display = 'none';
+    currentIndex = -1;
+  }
 
-      prevBtn.addEventListener('click', (e) => { e.stopPropagation(); showPrev(); });
-      nextBtn.addEventListener('click', (e) => { e.stopPropagation(); showNext(); });
+  // Attach click to each image
+  images.forEach((img, index) => {
+    img.addEventListener('click', () => openAt(index));
+  });
 
-      document.addEventListener('keydown', (e) => {
-        if (lightbox.getAttribute('aria-hidden') === 'false') {
-          if (e.key === 'Escape') closeLB();
-          if (e.key === 'ArrowLeft') showPrev();
-          if (e.key === 'ArrowRight') showNext();
-        }
-      });
-    
-      // Close on click
-      lightbox.addEventListener('click', () => {
-        lightbox.style.display = 'none';
-      });
-    </script>
+  // Close lightbox on overlay click
+  lightbox.addEventListener('click', closeLB);
+
+  // Keyboard navigation
+  document.addEventListener('keydown', (e) => {
+    if (lightbox.style.display === 'flex') {
+      if (e.key === 'Escape') closeLB();
+      if (e.key === 'ArrowRight') openAt(currentIndex + 1);
+      if (e.key === 'ArrowLeft') openAt(currentIndex - 1);
+    }
+  });
+</script>
 
 </body>
 </html>
